@@ -1,10 +1,9 @@
 package LinkedList;
 
-import LinkedList.ListNode;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class RemoveDuplicatesFromSortedListIITest {
     public ListNode deleteDuplicates(ListNode head) {
@@ -30,12 +29,12 @@ public class RemoveDuplicatesFromSortedListIITest {
     @Test
     public void test1() {
         ListNode listNode = ListNode.createListNode(new int[]{1, 2, 3, 3, 4, 4, 5}, 0);
-        Assert.assertEquals(Arrays.asList(1, 2, 5), ListNode.toList(deleteDuplicates(listNode)));
+        Assert.assertEquals(List.of(1, 2, 5), ListNode.toList(deleteDuplicates(listNode)));
     }
 
     @Test
     public void test2() {
         ListNode listNode = ListNode.createListNode(new int[]{1, 1, 1, 2, 3}, 0);
-        Assert.assertEquals(Arrays.asList(2, 3), ListNode.toList(deleteDuplicates(listNode)));
+        Assert.assertEquals(List.of(2, 3), ListNode.toList(deleteDuplicates(listNode)));
     }
 }
