@@ -1,10 +1,9 @@
 package LinkedList;
 
-import LinkedList.ListNode;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class ReverseNodesInKGroupTest {
     public ListNode reverseKGroup(ListNode head, int k) {
@@ -34,13 +33,13 @@ public class ReverseNodesInKGroupTest {
     public void test1() {
         ListNode head = ListNode.createListNode(new int[]{1, 2, 3, 4, 5}, 0);
         ListNode answer = reverseKGroup(head, 2);
-        Assert.assertEquals(Arrays.asList(2, 1, 4, 3, 5), ListNode.toList(answer));
+        Assert.assertEquals(List.of(2, 1, 4, 3, 5), ListNode.toList(answer));
     }
 
     @Test
     public void test2() {
         ListNode head = ListNode.createListNode(new int[]{1, 2, 3, 4, 5}, 0);
         ListNode answer = reverseKGroup(head, 3);
-        Assert.assertEquals(Arrays.asList(3, 2, 1, 4, 5), ListNode.toList(answer));
+        Assert.assertEquals(List.of(3, 2, 1, 4, 5), ListNode.toList(answer));
     }
 }
