@@ -36,19 +36,19 @@ public class PermutationsTest {
 
     @Test
     public void test1() {
-        List<List<Integer>> answer = Arrays.asList(
-                Arrays.asList(1, 2, 3),
-                Arrays.asList(1, 3, 2),
-                Arrays.asList(2, 1, 3),
-                Arrays.asList(2, 3, 1),
-                Arrays.asList(3, 1, 2),
-                Arrays.asList(3, 2, 1));
+        List<List<Integer>> answer = List.of(
+                List.of(1, 2, 3),
+                List.of(1, 3, 2),
+                List.of(2, 1, 3),
+                List.of(2, 3, 1),
+                List.of(3, 1, 2),
+                List.of(3, 2, 1));
         Assert.assertEquals(answer, permute(new int[]{1, 2, 3}));
     }
 
     @Test
     public void test2() {
-        List<List<Integer>> answer = Arrays.asList(Arrays.asList(0, 1), Arrays.asList(1, 0));
+        List<List<Integer>> answer = List.of(List.of(0, 1), List.of(1, 0));
         Assert.assertEquals(answer, permute(new int[]{0, 1}));
     }
 
