@@ -27,7 +27,7 @@ public class PathSumIITest {
     @Test
     public void test1() {
         TreeNode root = TreeNode.create(new Integer[]{5, 4, 8, 11, null, 13, 4, 7, 2, null, null, 5, 1});
-        Assert.assertEquals(Arrays.asList(Arrays.asList(5, 4, 11, 2), Arrays.asList(5, 8, 4, 5)), pathSum(root, 22));
+        Assert.assertEquals(List.of(List.of(5, 4, 11, 2), List.of(5, 8, 4, 5)), pathSum(root, 22));
     }
 
     @Test
